<resources>
    <string name="app_name">Orion</string>
    <string name="title_home">Accueil</string>
    <string name="title_vibrations">Vibrations</string>
    <string name="title_notifications">Notifications</string>
    <string name="mode_1">Mode 1</string>
    <string name="description_du_mode_1">Le <b>Mode 1</b> correspond à des vibrations simples avec un fondu en sortie : les vibrations ont la même intensité dans un premier temps, puis leur intensité diminue peu à peu jusqu\'à l\'arrêt total des vibrations.</string>
    <string name="mode_2">Mode 2</string>
    <string name="description_du_mode_2">Le <b>Mode 2</b> correspond à des vibrations simples avec un fondu en entrée et en sortie : l\'intensité des vibrations est croissante puis, après un certain palier, décroissante.</string>
    <string name="mode_3">Mode 3</string>
    <string name="description_du_mode_3">Le <b>Mode 3</b>  est similaire au <b>Mode 2</b> en ce qui concerne le motif des vibrations. La différence est sur le temps entre chaque vibration qui est deux fois plus rapide pour le <b>Mode 3</b> .</string>
    <string name="service_name">notific\'orion</string>
    <string name="app_title">App title</string>
    <string name="app_icon">app icon</string>
    <string name="vibration_mode">Vibration Mode</string>
    <string name="connection">Connexion</string>
    <string name="loading">Chargement…</string>
    <string name="disconnection">Déconnexion</string>
    <string name="n_a">N/A</string>
    <string name="choix_mode_vibration">Choix du mode de vibration</string>
    <string name="text_perm_location">Pour des raisons de sécurité, Android impose à tout utilisateur qui souhaite utiliser la technologie Bluetooth Low Energy (BLE) d\' accorder à l\'application concernée l\'autorisation d\'accéder à la position générale de l\'appareil.\nSur certains smartphones, la géolocalisation n\'a pas besoin d\'être activée, seule la permission est nécessaire.\nSoyez assuré que l\'application Orion n\'utilise ni ne stocke à aucun moment cette donnée.</string>
    <string name="text_perm_notifications">L\'application Orion doit être autorisée à accéder aux notifications de cet appareil.</string>
    <string name="help">Aide</string>
    <string name="infos">Infos</string>
    <string name="settings">Paramètres</string>
    <string name="title_info">À propos</string>
    <string name="text_info">\t\t\t\t<i>Orion</i> est un projet étudiant conçu par 12 élèves de l\'École Centrale de Lille, en collaboration avec l\'Institut d\'Électronique, de Micro-électronique et de Nanotechnologie (IEMN). L\'objectif de ce projet est de proposer une application concrète à une technologie de retour tactile de pointe développée par ce dernier.\n\t\t\t\tCette application constitue la moitié d\'un prototype, l\'autre moitié étant une montre programmable depuis cette même application. La liaison se fait par l\'intermédiaire de la technologie <i>Bluetooth Low Energy</i> (BLE).</string>
    <string name="title_help">Aide</string>
    <string name="question_help_1"><b>Sur quels appareils l\'application <i>Orion</i> fonctionne-t-elle ?</b></string>
    <string name="answer_help_1">\t-> L\'application devrait fonctionner sur tout appareil muni d\'une version du SDK Android supérieure ou égale à 21. Néanmoins, des plantages ont été constatés sur des appareils tournant sous Android 12.</string>
    <string name="question_help_2"><b>De quelles permissions l\'application <i>Orion</i> a-t-elle besoin ?</b></string>
    <string name="answer_help_2">\t-> <i>Accès aux notifications</i>, qui peut être accordée depuis le menu \"Accès spécial\" des paramètres du téléphone.\n\n\t-> <i>Localisation</i>\n(<i>ACCESS_COARSE_LOCATION</i>), qui peut être accordée depuis la page de l\'application dans la rubrique \"Applications\" des paramètres du téléphone.\n\n\t-> <i>Afficher notifications</i>, qui peut être accordée depuis la page de l\'application dans la rubrique \"Applications\" des paramètres du téléphone.</string>
    <string name="text_github">Lien du GitHub :</string>
    <string name="link_github"><a href="https://github.com/MGuckert/TactiGant-2.0">https://github.com/MGuckert/OrionProject</a></string>
    <string name="title_settings">Paramètres</string>
    <string name="text_settings">Adresse MAC de la carte :</string>
    <string name="MAC_placeholder">xx:xx:xx:xx:xx:xx</string>
    <string name="ok">OK</string>
    <string name="MAC_error">Veuillez entrer une adresse MAC valide</string>
    <string name="MAC_default">84:F7:03:60:7E:46</string>
    <string name="mode_sombre">Mode sombre</string>
    <string name="reset_data">Réinitialiser les modes de vibration</string>
    <string name="reset_vibrations_mode">Êtes-vous sûr de vouloir réinitialiser les modes de vibrations ?</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="search_app">Rechercher une application</string>
    <string name="no_results_app">Aucune application ne correspond à votre recherche.</string>
    <string name="delete">Effacer</string>
    <string name="default_vibration_dialog_text">Affectez un mode de vibration à app_title :</string>
    <string name="vibration_mode_name">Vibration Mode Name</string>
    <string name="mode_reset">Modes de vibrations réinitialisés</string>
    <string name="vibrations_logo">Vibrations logo</string>
</resources>